--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="./index.html">Головна</a>
+            <span>&nbsp;</span>
+            <a href="./pages/gallery.html">Галерея</a>
+        </nav>
+    </header>
     
 </body>
 </html>
