--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework_2</title>
 </head>
 <body>
     <header>
@@ -13,5 +13,11 @@
             <a href="./gallery.html">Галерея</a>
         </nav>
     </header>
+    <main>
+        <h1>Галерея</h1>
+        <img src="../img/img1.webp" alt="img1" height="250">
+        <img src="../img/img2.webp" alt="img2" height="250">
+        <img src="../img/img3.jpg" alt="img3" height="250">
+    </main>
 </body>
 </html>
