--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
             <a href="./pages/gallery.html">Галерея</a>
         </nav>
     </header>
-    
+    <main>
+        <section>
+            <h1>Ісландія</h1>
+            <p>
+                Ісла́ндія, раніше Ісля́ндія — нордична острівна держава в Європі, розташована у північній частині Атлантичного океану на Серединно-Атлантичному хребті, з населенням близько 364 000 і площею 103 тис. км². Столиця і найбільше місто — Рейк'явік, де, разом із прилеглими районами у південно-західному регіоні країни, проживає близько двох третин населення країни. Ісландія є вулканічно і геологічно активною територією. Її поверхня в основному складається з плато, покритих піщаними полями, горами та льодовиками, хоча багато льодовикових річок течуть до моря через низовини. Ісландія, зігріта Гольфстримом, має помірний клімат, незважаючи на високі широти і безпосередню близькість до Полярного кола.
+            </p>
+            <p>
+                Фото Ісландії <a href="./pages/gallery.html">тут</a>
+            </p>
+        </section>
+    </main>
 </body>
 </html>
