--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -14,10 +14,15 @@
         </nav>
     </header>
     <main>
-        <h1>Галерея</h1>
-        <img src="../img/img1.webp" alt="img1" height="250">
-        <img src="../img/img2.webp" alt="img2" height="250">
-        <img src="../img/img3.jpg" alt="img3" height="250">
+        <section>
+            <h1>Галерея</h1>
+            <img src="../img/img1.webp" alt="img1" height="250">
+            <img src="../img/img2.webp" alt="img2" height="250">
+            <img src="../img/img3.jpg" alt="img3" height="250">
+            <p>
+                Інформація про Ісландію <a href="../index.html">тут</a>
+            </p>
+        </section>
     </main>
 </body>
 </html>
