--- a/index.html
+++ b/index.html
@@ -7,15 +7,53 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-
+    <header class="header">
+<h1>
+    Homework_3
+</h1>
     </header>
     <main>
-
+<section>
+    <div class="selectors">
+<ul>
+    <h2>Типи селекторів</h2>
+    <li>Селектори елементу - Як селектор може виступати будь-який елемент HTML, для якого визначаються правила форматування, такі як: колір, фон, розмір тощо.</li>
+    <li>Ідентифікатори - Ідентифікатор визначає унікальне ім'я елемента, яке використовується для зміни його стилю і звернення до нього через скрипти.</li>
+    <li>Класи - Класи застосовують, коли необхідно визначити стиль для одного або декількох елементів веб-сторінки. Елементи при цьому можуть бути різними, але мати частково або повністю схожі елементи оформлення. У коді HTML ім'я класу визначається через атрибут class.</li>
+    <li>Мультикласи - До будь-якого елемента одночасно можна додати кілька класів, перераховуючи їх в атрибуті class через пробіл. У цьому разі до елемента застосовується стиль, описаний у правилах для кожного класу. Оскільки під час додавання кількох класів вони можуть містити однакові стильові властивості, але з різними значеннями, то береться значення в класу, який описано в коді нижче.</li>
+    <li>Універсальний селектор - Іноді потрібно встановити одночасно один стиль для всіх елементів веб-сторінки, наприклад, задати шрифт або накреслення тексту. У цьому випадку допоможе універсальний селектор, який відповідає будь-якому елементу веб-сторінки.</li>
+    <li>Вкладені селектори - Під час створення веб-сторінки часто доводиться вкладати одні елементи всередину інших. Щоб стилі цих елементів використовувалися коректно, допоможуть вкладені селектори. Наприклад, встановити стиль для b тільки коли він розташовується всередині контейнера p. Таким чином можна одночасно встановити стиль для окремого елемента, а також елемента, який знаходиться всередині іншого.</li>
+    <li>Дочірні селектори - Дочірнім називається елемент, який безпосередньо розташовується всередині батьківського елемента. Який елемент виступає батьківським, а який його нащадком легко з'ясувати за допомогою дерева елементів - так називається структура відносин елементів документа між собою. </li>
+    <li>Сусідні селектори - Сусідні називаються елементи веб-сторінки, коли вони йдуть безпосередньо один за одним у коді документа.</li>
+    <li>Споріднені селектори - Споріднені селектори за своєю поведінкою схожі на сусідні селектори (запис виду E + F), але на відміну від них стильові правила застосовуються до всіх прилеглих елементів. Наприклад, для селектора h1~p стиль буде застосовуватися до всіх елементів p, що розташовуються після заголовка h1. При цьому h1 і p повинні мати спільний батьківський елемент, тому якщо p вставити всередину div, то стилі застосовуватися вже не будуть.</li>
+    <li>Селектори атрибутів - Встановлює стиль для елемента, якщо задано специфічний атрибут. Його значення в цьому випадку не важливе.</li>
+    <li>[атрибут="значення"] - Встановлює стиль для елемента в тому випадку, якщо задано певне значення специфічного атрибута.</li>
+    <li>[атрибут^="значення"] - Встановлює стиль для елемента в тому випадку, якщо значення атрибута починається із зазначеного тексту.</li>
+    <li>[атрибут$="значення"] - Встановлює стиль для елемента в тому випадку, якщо значення атрибута закінчується зазначеним текстом.</li>
+    <li>[атрибут*="значення"] - Можливі варіанти, коли стиль слід застосувати до тега з певним атрибутом, коли частиною його значення є деякий текст. При цьому точно не відомо, в якому місці значення включено цей текст - на початку, в середині або наприкінці. У подібному випадку слід використовувати конструкцію *=. Вона визначає, що значення атрибута містить зазначений текст.</li>
+    <li>[атрибут~="значення"] - Деякі значення атрибутів можуть перераховуватися через пробіл, наприклад імена класів. Щоб задати стиль за наявності в списку необхідного значення, потрібно використовувати конструкцію ~=.</li>
+    <li>[атрибут|="значення"] - В іменах ідентифікаторів і класів дозволено використовувати символ дефіса (-), що дає змогу створювати значущі значення атрибутів id і class.</li>
+</ul>
+    </div>
+    <div class="selectors_examples">
+<h2> Приклади використання селекторів</h2>
+<h3>Lorem ipsum dolor sit amet.</h3>
+<p id="id1">Lorem ipsum dolor sit amet.</p>
+<p class="example_3">Lorem ipsum dolor sit amet.</p>
+<p class="class1 class2">Lorem ipsum dolor sit amet.</p>
+<p><b>Lorem ipsum dolor sit amet.</b></p>
+<div>
+    <p>Lorem ipsum dolor sit amet.</p>
+</div>
+<button>
+    Lorem ipsum dolor sit amet.
+</button>
+<p>Lorem ipsum dolor sit amet.</p>
+<h4>Lorem ipsum dolor sit amet.</h4>
+<p title="title">Lorem ipsum dolor sit amet.</p>
+    </div>
+</section>
     </main>
-    <footer>
-
-    </footer>
     <script src="./js/main.js"></script>
 </body>
 </html>
