--- a/index.html
+++ b/index.html
@@ -1,21 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <header>
-
-    </header>
     <main>
+        <section class="section">
+            <div class="container">
+                <h2>Найкращі країни для відпочинку</h2>
+                <div class="inline-block">
+                    <div class="inline-block-item">
+                        <div class="img-box">
+                            <img src="./images/icons/Albania.avif" alt="Albania" width="200">
+                        </div>
+                        <div class="inline-block-box">
+                            <h3>Албанія</h3>
+                            <p>Албанія - це дивовижна, але не дуже популярна серед туристів країна. Тур в Албанію точно запам'ятається кожному. Адже за ширмою незвіданої європейської, але при цьому мусульманської країни, ховається дивовижна перлина, яка готова подарувати масу радості, нового і цікавого!</p>
+                            <div class="price">
+                                <strong>550$</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="inline-block-item">
+                        <div class="img-box">
+                            <img src="./images/icons/France.jpg" alt="France" width="200">
+                        </div>
+                        <div class="inline-block-box">
+                            <h3>Франція</h3>
+                            <p>Один із найпопулярніших способів провести відпустку у Франції – це відвідати Париж. Це місто відоме своїми історичними пам’ятками, культурою та кухнею. Ви можете відвідати Ейфелеву вежу, Лувр, Нотр Дам де Парі, Монмартр, Єлисейські поля або насолоджуватися нескінченними магазинами. У Парижі ви знайдете безліч ресторанів, булочних, пекарень та кондитерських.</p>
+                            <div class="price">
+                                <strong>800$</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="inline-block-item">
+                        <div class="img-box">
+                            <img src="./images/icons/Greece.webp" alt="Greece" width="200">
+                        </div>
+                        <div class="inline-block-box">
+                            <h3>Греція</h3>
+                            <p>У сонячній Греції є все: стародавня культура, море, пам'ятки, гори. Можливо, саме тому вона привертає так багато туристів. Щодня тисячі туристів купують тури в Грецію, щоб влаштувати собі неймовірний відпочинок.</p>
+                            <div class="price">
+                                <strong>450$</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="inline-block-item">
+                        <div class="img-box">
+                            <img src="./images/icons/Italy.jpg" alt="Italy" width="200">
+                        </div>
+                        <div class="inline-block-box">
+                            <h3>Італія</h3>
+                            <p>Італія - неповторна і різноманітна країна. Кожне італійське місто - унікальне, чимось схоже на інші і по-своєму привабливе. Всі міста і курорти батьківщини Челентано, ми, на жаль, перерахувати не можемо. Але, ми можемо перерахувати основні, заради яких точно варто організувати відпочинок в Італії.</p>
+                            <div class="price">
+                                <strong>800$</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="inline-block-item">
+                        <div class="img-box">
+                            <img src="./images/icons/Spain.jpg" alt="Spain" width="200">
+                        </div>
+                        <div class="inline-block-box">
+                            <h3>Іспанія</h3>
+                            <p>Ах, Іспанія! Тут чарівним здається все: яскраві вбрання іспанок, що так і дивись кинуться в танок, неповторна архітектура, яка створює враження, що ви просто на іншій планеті, смачні місцеві страви, які оцінить будь-який гурман! Іспанія вабить всіх – незалежно від захоплень, способу життя і бюджету. Тут кожен знайде щось дійсно цікаве і захопливе саме для себе!</p>
+                            <div class="price">
+                                <strong>700$</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="inline-block-item">
+                        <div class="img-box">
+                        <img src="./images/icons/Turkey.avif" alt="Turkey" width="200">
+                        </div>
+                        <div class="inline-block-box">
+                            <h3>Туреччина</h3>
+                            <p>Пляжний відпочинок в Туреччині - турецькі пляжі не потребують реклами. Більшість туристів купують путівки в Туреччину заради хорошого пляжного відпочинку. Є пляжі на будь-який смак: піщані, галечні, відокремлені і багатолюдні. Загалом, уся різноманітність чотирьох морів чекає любителів поніжитися на сонечку і поплавати в морі.</p>
+                            <div class="price">
+                                <strong>400$</strong>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
-    </footer>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
