--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
 
     </header>
     <main>
-
+<section class="section">
+    <div class="container">
+        <div class="float-box">
+            <div class="float-row clearfix">
+                <div class="float-item float-item-1">1</div>
+                <div class="float-item float-item-2">2</div>
+            </div>
+                    <div class="float-row clearfix">
+                        <div class="float-item float-item-3">1</div>
+                        <div class="float-item-wrapper">
+                            <div class="float-item float-item-4">2</div>
+                            <div class="float-item float-item-5">3</div>
+                            <div class="float-item float-item-6">4</div>
+                            <div class="float-item float-item-7">5</div>
+                        </div>
+                </div>
+                    <div class="float-row clearfix">
+                        <div class="float-item float-item-8">1</div>
+                        <div class="float-item float-item-9">2</div>
+                        <div class="float-item-wrapper">
+                            <div class="float-item float-item-10">3</div>
+                            <div class="float-item float-item-11">4</div>
+                        </div>
+                    </div>
+</section>
     </main>
     <footer>
 
