--- a/index.html
+++ b/index.html
@@ -7,14 +7,148 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-
+    <header class="header">
+<div class="container">
+    <nav class="nav">
+        <ul class="menu">
+            <li class="menu-item menu-item-homepage">
+                <a href="#" class="menu-item menu-item-homepage">HOMEPAGE</a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-item">ABOUT AUTHOR</a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-item">WORKS</a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-item">PROCESS</a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-item">CONTACTS</a>
+            </li>
+        </ul>
+    </nav>
+</div>
     </header>
     <main>
-
+<section class="section section-1">
+    <div class="container">
+        <h1 class="title">
+            Design and layout
+        </h1>
+        <div class="text-box">
+            <p>
+                Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.
+            </p>
+        </div>
+        <button class="button">WRITE ME</button>
+    </div>
+</section>
+<section class="section">
+    <div class="container">
+        <h2 class="about">
+            About me
+        </h2>
+        <div class="about-information">
+            <p>About meLorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
+        </div>
+    </div>
+</section>
+<section class="section section-2">
+    <div class="container">
+        <div class="img-box">
+            <div class="image">
+                <img src="./images/project.png" alt="img">
+                <div class="img-text">
+                    <div class="img-text-1">
+                        <h3>40+</h3>
+                    </div>
+                    <div class="img-text-2">
+                        <p>projects</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="./images/project.png" alt="img">
+                <div class="img-text">
+                    <div class="img-text-1">
+                        <h3>40+</h3>
+                    </div>
+                    <div class="img-text-2">
+                        <p>projects</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="./images/project.png" alt="img">
+                <div class="img-text">
+                    <div class="img-text-1">
+                        <h3>40+</h3>
+                    </div>
+                    <div class="img-text-2">
+                        <p>projects</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="./images/project.png" alt="img">
+                <div class="img-text">
+                    <div class="img-text-1">
+                        <h3>40+</h3>
+                    </div>
+                    <div class="img-text-2">
+                        <p>projects</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="./images/project.png" alt="img">
+                <div class="img-text">
+                    <div class="img-text-1">
+                        <h3>40+</h3>
+                    </div>
+                    <div class="img-text-2">
+                        <p>projects</p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="./images/project.png" alt="img">
+                <div class="img-text">
+                    <div class="img-text-1">
+                        <h3>40+</h3>
+                    </div>
+                    <div class="img-text-2">
+                        <p>projects</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section section-3">
+    <div class="container">
+        <h2 class="work">
+            How do I work
+        </h2>
+        <div class="work-information">
+            <p>Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
+        </div>
+        <div class="video">
+            <iframe width="1100" height="600" src="https://www.youtube.com/embed/BHACKCNDMW8?si=7kYNvciTWiR-8jBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
-
+<div class="container">
+   <h3 class="footer-title">
+    John Smith
+   </h3> 
+   <div class="footer-text">
+    <p>(c) 2018. All rights reserved.</p>
+   </div>
+</div>
     </footer>
     <script src="./js/main.js"></script>
 </body>
