--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
 
     </header>
     <main>
-
+        <table>
+            <thead>
+                <tr>
+                    <th class="bg-color-blue" colspan="4">MY FIRST TABLE</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="bg-color-blue">First cell</td>
+                    <td class="bg-color-blue">Second cell</td>
+                    <td colspan="2" rowspan="3">6 cells merged together</td>
+                </tr>
+                <tr>
+                    <td colspan="2">2 cells merged into one</td>
+                </tr>
+                <tr>
+                    <td>1st cell 3rd row</td>
+                    <td>2nd cell 3rd row</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">Do you like tables?</td>
+                </tr>
+            </tfoot>
+        </table>
     </main>
     <footer>
 
     </footer>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
