--- a/index.html
+++ b/index.html
@@ -8,10 +8,39 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <a href="./index.html">Реєстрація</a>
+            <span>&nbsp;</span>
+            <a href="./pages/authorization.html">Авторизація</a>
+            <span>&nbsp;</span>
+            <a href="./pages/search.html">Пошук</a>
+        </nav>
     </header>
     <main>
-
+<section class="section">
+    <div class="container">
+        <h1 class="title">Вітаємо вас на сайті з пошуку автомобілів</h1>
+        <h2 class="subtitle">Для початку здійсніть реєстрацію</h2>
+        <form action="https://fom.in.ua/echo" name="auth" method="get">
+           <h2 class="form-title">Реєстрація</h2>
+            <div class="input-row">
+               <label class="form-label" for="email">Email</label>
+               <input class="form-input" type="email" name="email" id="email" minlength="2" placeholder="Input email">
+            </div>
+           <div class="input-row">
+               <label class="form-label" for="password">Пароль</label>
+               <input class="form-input" type="text" name="password" id="password" minlength="2" placeholder="Input password">
+            </div>
+           <div class="input-row">
+               <label class="form-label" for="password-2">Підтвердження паролю</label>
+               <input class="form-input" type="text" name="password-2" id="password-2" minlength="2" placeholder="Input password"> 
+            </div>
+            <div class="form-button">
+                <button type="submit">Зареєструватись</button>
+           </div>
+        </form>
+    </div>
+</section>
     </main>
     <footer>
 
