--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
 </head>
 <body>
     <header>
-
+<div class="container">
+    <nav class="nav">
+        <ul class="menu">
+            <li class="menu-item">
+                <a href="/" class="menu-item-link">HOME</a>
+            </li>
+            <li class="menu-item">
+                <a href="/" class="menu-item-link">PRODUCTS+</a>
+                <ul class="sub-menu">
+                    <li class=" sub-menu-item">
+                        <a href="/" class="sub-menu-item-link">Product 1</a>
+                    </li> 
+                    <li class=" sub-menu-item">
+                        <a href="/" class="sub-menu-item-link">Product 2+</a>
+                    <ul class=" sub-menu-2">
+                        <li class="  sub-menu-item-2">
+                            <a href="/" class="sub-menu-item-link sub-menu-item-link-2">Sub Item</a>
+                        </li>
+                        <li class="  sub-menu-item-2">
+                            <a href="/" class="sub-menu-item-link sub-menu-item-link-2">Sub Item</a>
+                        </li>
+                    </ul>
+                    </li> 
+                </ul>
+            </li>
+            <li class="menu-item">
+                <a href="/" class="menu-item-link">ABOUT</a>
+            </li>
+            <li class="menu-item">
+                <a href="/" class="menu-item-link">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
+</div>
     </header>
     <main>
 
